# easynode

./: CMakeLists.txt  README.md  config.h  hw_config.c  main.c
prebuilt/: easynode.dis  easynode.elf  easynode.elf.map  easynode.hex  easynode.uf2
